--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>Object name: </h3>
 <br></br>
 </div>
-<input type="text" id="bruh" class="form-control" placeholder="Enter Object Name">
+<input type="text" class="form-control" placeholder="Enter Object Name">
 <br></br>
 <button class="btn btn-danger" onclick="start()">Start</button>
 <br><br>
